# ergon-tracker

./: .env.example  .gitignore  INDEX_RUNS.md  INDEX_STATUS.md  LICENSE  README.md  ameriserv.yml  pyproject.toml  residual_giants.txt  sp500_ambiguous.txt
.github/workflows/: build-index.yml  ci.yml
.playwright-mcp/: evergy_ajax.txt  page-2026-06-21T04-47-55-895Z.yml  page-2026-06-21T04-48-37-062Z.yml  page-2026-06-21T04-48-45-702Z.yml  page-2026-06-21T04-54-57-582Z.yml  page-2026-06-21T04-58-18-481Z.yml  page-2026-06-21T04-58-26-695Z.yml  page-2026-06-21T05-02-41-908Z.yml  page-2026-06-21T05-06-14-504Z.yml  page-2026-06-21T05-06-23-074Z.yml  page-2026-06-21T05-14-01-231Z.yml  page-2026-06-21T05-14-07-680Z.yml  page-2026-06-21T05-15-20-140Z.yml  page-2026-06-21T05-15-26-898Z.yml  page-2026-06-21T05-15-51-047Z.yml  page-2026-06-21T05-15-58-782Z.yml  page-2026-06-21T05-16-52-617Z.yml  page-2026-06-21T05-27-33-058Z.yml  page-2026-06-21T05-28-06-044Z.yml  page-2026-06-21T05-28-22-022Z.yml  page-2026-06-21T05-28-28-332Z.yml  page-2026-06-21T05-28-29-225Z.yml  page-2026-06-21T05-28-42-303Z.yml  page-2026-06-21T05-29-27-756Z.yml  page-2026-06-21T05-30-24-888Z.yml  page-2026-06-21T05-30-26-434Z.yml  page-2026-06-21T05-30-31-265Z.yml  page-2026-06-21T05-30-39-546Z.yml  page-2026-06-21T05-30-41-127Z.yml  page-2026-06-21T05-32-18-960Z.yml  page-2026-06-21T05-33-14-092Z.yml  page-2026-06-21T05-34-25-427Z.yml  page-2026-06-21T05-54-59-087Z.yml  page-2026-06-21T05-56-43-974Z.yml  page-2026-06-21T05-57-11-150Z.yml  page-2026-06-21T06-41-41-565Z.yml  page-2026-06-21T06-45-07-919Z.yml  page-2026-06-21T07-01-12-947Z.yml  page-2026-06-21T08-04-03-620Z.yml  page-2026-06-21T08-04-50-719Z.yml  (+21 more)
data/companies/: lever.csv
docs/: expansion-roadmap.md  extraction-baseline.md  extraction-labeling-guide.md  landscape-job-fetching-tools.md  mcp-quickstart.md
docs/ats_research/: avature.md  brassring.md  icims.md  jazzhr.md  jobvite.md  oracle_orc.md  phenom.md  taleo.md
docs/superpowers/plans/: 2026-06-18-search-index-m2.md  (+4 more)
runs/: RUNS.md  adp_pending_verify.json  adz_verdict.json  adzuna_chunks.json  apicapture_backup.json  browser_queue_triage.json  flagship_targets.md  gap_ats_census.json  gap_eightfold.json  giants.json  goldman_spec.json  h1b_coverage_gap.json  h1b_gap_midtier.json  missed_ats_ladder_gaps.json  missing_chunks.json  newpattern_hits.json  residual_hits.json  sec_hunt_ledger.json  sponsor_recovery_report.json
runs/2026-06-16-gold-2406/: run.json
runs/2026-06-16-gold-500/: agreement.json  eval.json  gold.jsonl  run.json
scripts/: _categorize.py  _edgar_candidates.json  _verify_b2.py  adzuna_fallback.py  ats_exhaustion_sweep.py  audit_h1b_coverage.py  audit_public_coverage.py  browser_discovery.py  browser_queue.json  browser_tier1_targets.json  build_h1b_sponsors.py  build_index.py  build_registry.py  build_sector_naics.py  cand_ancile.json  cand_artifint.json  cand_ashby2.json  cand_b2_energy.json  cand_b2_fin.json  cand_b2_travel.json  cand_balyasny.json  cand_batchC.json  cand_c_fin.json  cand_c_ind.json  cand_c_retail.json  cand_c_tech.json  cand_ceipal.json  cand_citadel.json  cand_d_cpg.json  cand_d_ind.json  cand_d_ins.json  cand_d_med.json  cand_dvg.json  cand_e_chem.json  cand_e_fin.json  cand_e_food.json  cand_e_util.json  cand_fin.json  cand_fiu.json  cand_flagship_ats.json  (+92 more)
src/ergon_tracker/: __init__.py  cli.py  client.py  dedup.py  engine.py  enrich.py  exceptions.py  http.py  mcp_server.py  models.py  observability.py  ranking.py  semantic.py  spec_health.py  sync.py  token_store.py
src/jobspine/: __init__.py  cli.py  client.py  config.py  dedup.py  engine.py  enrich.py  exceptions.py  http.py  mcp_server.py  models.py  search.py  state.py  sync.py
tests/: conftest.py  test_adzuna.py  test_apicapture_htmltable.py  test_apicapture_tier2.py  test_assess_fit.py  test_ats_exhaustion_sweep.py  test_avature.py  test_b_cron.py  test_bamboohr.py  test_brassring.py  test_breezy.py  test_browser_discovery.py  test_build_index_script.py  test_build_main_wiring.py  test_build_registry.py  test_capture_eightfold_slugs.py  test_ceipal.py  test_census_gap_ats.py  test_census_resilience.py  test_company_directory.py  test_company_resolve.py  test_crawl_conditional.py  test_dayforce.py  test_dedup.py  test_dejobs.py  test_eightfold.py  test_enrich.py  test_extract_comp.py  test_extraction_quality.py  test_filter_include_unknown.py  test_foundation.py  test_freshness.py  test_geo.py  test_geo_metro.py  test_h1b_jobs.py  test_harvest_aggregator_apply_urls.py  test_harvest_ccduck.py  test_harvest_commoncrawl.py  test_harvest_github.py  test_harvest_sponsors_tavily.py  (+67 more)
tests/data/: gold.jsonl
tests/fixtures/: bamboohr_jobs.json  breezy_jobs.json  join_page.html  teamtailor_jobs.json
(+70 files in other folders)
