[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobspine"
version = "0.1.0"
description = "Unified, reliable, typed job-fetching SDK that combines and canonicalizes free job sources (ATS feeds + aggregators)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kanagn", email = "kwnstantinosanagn@gmail.com" }]
keywords = ["jobs", "ats", "greenhouse", "lever", "ashby", "workday", "scraping", "aggregator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = [
  "httpx[http2]>=0.27",
  "anyio>=4.3",
  "aiolimiter>=1.1",
  "stamina>=24.2",
  "pydantic>=2.6",
  "hishel>=0.0.30",
  "selectolax>=0.3.21",
  "rapidfuzz>=3.6",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2"]
polars = ["polars>=0.20"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "vcrpy>=6",
  "pytest-cov",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kanagn/jobspine"
Source = "https://github.com/kanagn/jobspine"

[project.scripts]
jobspine = "jobspine.cli:app"

# Third-party providers register here:
# [project.entry-points."jobspine.providers"]
# myats = "my_pkg.provider:MyATSProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/jobspine"]

[tool.hatch.build.targets.wheel.force-include]
"src/jobspine/registry/data" = "jobspine/registry/data"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/jobspine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
