[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ergon-tracker"
version = "0.1.0"
description = "Unified, reliable, typed job-fetching SDK that combines and canonicalizes free job sources (ATS feeds + aggregators)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kanagn", email = "kwnstantinosanagn@gmail.com" }]
keywords = ["jobs", "ats", "greenhouse", "lever", "ashby", "workday", "scraping", "aggregator"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = [
  "httpx[http2]>=0.27",
  "anyio>=4.3",
  "aiolimiter>=1.1",
  "stamina>=24.2",
  "pydantic>=2.6",
  "hishel>=0.0.30",
  "selectolax>=0.3.21",
  "curl_cffi>=0.7",
  "rapidfuzz>=3.6",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
pandas = ["pandas>=2.2"]
polars = ["polars>=0.20"]
mcp = ["mcp>=1.12"]
semantic = ["fastembed>=0.3"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "vcrpy>=6",
  "pytest-cov",
  "ruff>=0.5",
  "mypy>=1.10",
  "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/konstantinosanagn/ergon-tracker"
Source = "https://github.com/konstantinosanagn/ergon-tracker"

[project.scripts]
ergon-tracker = "ergon_tracker.cli:app"
ergon-tracker-mcp = "ergon_tracker.mcp_server:main"

# Third-party providers register here:
# [project.entry-points."ergon_tracker.providers"]
# myats = "my_pkg.provider:MyATSProvider"

[tool.hatch.build.targets.wheel]
packages = ["src/ergon_tracker"]

[tool.hatch.build.targets.wheel.force-include]
"src/ergon_tracker/registry/data" = "ergon_tracker/registry/data"
"src/ergon_tracker/index/schema.sql" = "ergon_tracker/index/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# typer.Option/Argument return sentinel objects (not mutable defaults); they are the
# idiomatic way to declare CLI params, so don't flag them under B008.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/ergon_tracker"]

# numpy's bundled stubs (pulled in via pandas/polars) use PEP 695 `type` statements that mypy
# rejects under python_version 3.10, breaking CI on the 3.12/3.13 matrix. We don't type-check
# numpy internals — skip following into it.
[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
